# limbo

./: .gitignore  COMPAT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.antithesis  Makefile  NOTICE.md  test
.github/workflows/: rust.yml  rust_perf.yml
bindings/go/: stmt.go  turso.go  types.go
bindings/javascript/: wrapper.js
bindings/rust/: Cargo.toml
bindings/wasm/: lib.rs  package-lock.json
cli/: Cargo.toml  app.rs  helper.rs  input.rs  main.rs
cli/commands/: args.rs  import.rs  mod.rs
cli/config/: palette.rs
core/: Cargo.toml  ephemeral.rs  error.rs  function.rs  lib.rs  pragma.rs  schema.rs  types.rs  util.rs  uuid.rs  vtab.rs
core/benches/: benchmark.rs  json_benchmark.rs  tpc_h_benchmark.rs
core/ext/: dynamic.rs  extern_types.rs  mod.rs  vtab_connect.rs  vtab_xconnect.rs
core/functions/: datetime.rs  printf.rs
core/io/: generic.rs  io_uring.rs  memory.rs  mod.rs  unix.rs  vfs.rs  windows.rs
core/json/: cache.rs  json_operations.rs  jsonb.rs  mod.rs  ops.rs  ser.rs
core/mvcc/: cursor.rs  mod.rs
core/numeric/: mod.rs
core/storage/: btree.rs  database.rs  header_accessor.rs  page_cache.rs  pager.rs  sqlite3_ondisk.rs  wal.rs
core/time/: mod.rs
core/translate/: aggregation.rs  compound_select.rs  delete.rs  display.rs  drop.rs  emitter.rs  expr.rs  group_by.rs  index.rs  insert.rs  main_loop.rs  mod.rs  (+11 more)
docs/: internals.md
extensions/core/: Cargo.toml  README.md
extensions/core/src/: lib.rs  types.rs  vtabs.rs
extensions/cryptfs/: Cargo.toml
extensions/cryptfs/src/: lib.rs
extensions/tests/: Cargo.toml
extensions/tests/src/: lib.rs
scripts/: run-sim
simulator/: Cargo.toml  main.rs
stress/: Cargo.toml  main.rs
testing/: agg-functions.test  all.test  delete.test  extensions.py  insert.test  json.test  memory.py  memory.test  orderby.test  pyproject.toml  select.test  tester.tcl  update.test  vfs_extension.db  where.test
(+75 files in other folders)
