[package]
name = "limbo_ext"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Limbo extensions core"

[features]
default = []
static = []

[dependencies]
chrono = "0.4.39"
getrandom = "0.3.1"
limbo_macros = { workspace = true }
